# eg2_analysis

./: CMakeLists.txt  README.md  acc_corr.cpp  find_corr_single.cpp  find_correction.cpp  fit_basic.cpp  gen_pseudo.cpp  mcmc_bin.cpp  mcmc_kde.cpp  pp_to_p.cpp  print_tree.cpp  process_tree.cpp
acceptance/: AccMap.cpp  CMakeLists.txt  map_test.cpp
cmake_modules/: FindROOT.cmake
cross_sections/: CMakeLists.txt  Cross_Sections.cpp  cs_query.cpp
cross_sections/misak_lib/: CMakeLists.txt  sigma_en_bound.f  wrapper.cpp
data/: SRC_e1p_Al_GoodRuns_coulomb.root  SRC_e1p_C_GoodRuns_coulomb.root  SRC_e1p_Fe_GoodRuns_coulomb.root  SRC_e1p_Pb_GoodRuns_coulomb.root  SRC_e2p_Al_GoodRuns_coulomb.root  SRC_e2p_C_GoodRuns_coulomb.root  SRC_e2p_Fe_GoodRuns_coulomb.root  SRC_e2p_Pb_GoodRuns_coulomb.root
data/combined/: SRC_e2p_all.root  combiner.C
data/corrected/: SRC_e1p_C_corrected.root
data_corrections/: CMakeLists.txt  corrector.cpp
data_corrections/deuterium_analysis/: electron_E_corr.cpp
fiducials/: CMakeLists.txt  fid_e_test.cpp  fid_p_test.cpp  fid_recoil_test.cpp  fid_test.cpp  fiducials.cpp
generator/: CMakeLists.txt  Cross_Sections.cpp  Cross_Sections.h  Nuclear_Info.cpp  Nuclear_Info.h  ep_cut.cpp  gen_weight.cpp  make_hists.cpp  make_hists_023.cpp  make_hists_145.cpp  make_ratios.cpp  pp_np_cut.cpp  pp_np_prec.cpp  simulator.cpp
generator/Andrew/: CMakeLists.txt  Emiss.cpp  H2T.cpp  TGAE2T.cpp
generator/Axel/: CMakeLists.txt  lc_a2_test.cpp  mistaken_recoils.cpp
generator/Jackson/: CMakeLists.txt  CMakeLists.txt~  R2I.cpp  fiducial_plot.cpp  fiducial_plot.cpp~  gapHists.cpp  looper.C  pn_p_cut.cpp  pn_p_hists.cpp  pp_np_cut.cpp  pp_np_likelihood.cpp  pp_np_likelihood.cpp~  prec_hists.cpp  recombine.cpp  sim_w_farm.cpp  sim_w_farm.cpp~  sim_wo_farm.cpp  sim_wo_farm.cpp~
generator/clas_note/: Makefile  clas_note.tex  references.bib
generator/clas_note/graphics/leading_dist/: hists.txt  leading_Pmiss.tex  leading_QSq.tex  leading_theta_Pmq.tex  leading_xB.tex  palette.gnu  plot.gnu  plot.gnu~
helpers/: CMakeLists.txt  helpers.cpp
include/: AccMap.h  Cross_Sections.h  constants.h  fiducials.h  helpers.h  misak.h
skim/: CMakeLists.txt  corrector.cpp
skim/deuterium_analysis/: CMakeLists.txt  electron_E_corr.cpp
